# MCUViewer

./: .clang-format  .gitignore  CMakeLists.txt  MD80_copy.cfg  Project.cfg  Project2.cfg  Project3.cfg  README.md  STMViewer_test.cfg  TODO.md  icon.rc  imgui.ini  test.cfg  testProject.cfg
.github/: CONTRIBUTING.md  FUNDING.yml  issue_template.md
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: FUNDING.yml  build.yaml  build_linux.yaml  build_macos.yaml  build_windows.yaml  run_tests.yaml
cmake/modules/: Findlibusb.cmake
example/MCUViewer_test/: .cproject  .mxproject  .project  MCUViewer_test.ioc  MCUViewer_test.launch  STM32G474CCUX_FLASH.ld  STM32G474CCUX_RAM.ld
example/STMViewer_test/: .clang-format  .cproject  .mxproject  MCUViewer_test Debug.launch  STMViewer_test Debug (1).launch  STMViewer_test Debug.launch  STMViewer_test.ioc  test.jscope
launch/: Dockerfile  MCUViewer.desktop  STMViewer.desktop  addGitVersion.bat  addGitVersion.py  addGitVersion.sh  icon.rc  icon.xcf  launch.bat  release.sh  release_linux.sh  release_macos.sh  release_windows.sh  run_tests.sh
launch/udevrules/: 49-stlinkv1.rules  49-stlinkv2.rules  49-stlinkv3.rules
src/: commons.cpp  commons.hpp  gitversion.h  gitversion.hpp  imgui.ini  main.cpp
src/CSVStreamer/: CSVStreamer.cpp  CSVStreamer.hpp
src/ConfigHandler/: ConfigHandler.cpp  ConfigHandler.hpp  imgui.ini
src/DataHandler/: DataHandlerBase.hpp  TraceDataHandler.cpp  TraceDataHandler.hpp  ViewerDataHandler.cpp  ViewerDataHandler.hpp
src/ElfReader/: ElfReader.cpp  ElfReader.hpp  IElfReader.hpp
src/FileHandler/: IFileHandler.hpp  NFDFileHandler.cpp  NFDFileHandler.hpp
src/GdbParser/: GdbParser.cpp  GdbParser.hpp  ProcessHandler.hpp
src/Gui/: Gui.cpp  Gui.hpp  GuiAbout.cpp  GuiAcqusition.cpp  GuiGroupEdit.hpp  GuiHelper.cpp  GuiHelper.hpp  GuiImportVariables.cpp  GuiImportVariables.hpp  GuiPlotEdit.hpp  GuiPlots.cpp  GuiPlotsTree.hpp  GuiSelectVariable.hpp  GuiStatisticsWindow.hpp  GuiSwoControl.cpp  GuiSwoPlots.cpp  GuiVarTable.hpp  GuiVariablesEdit.cpp  GuiVariablesEdit.hpp  Popup.hpp  imgui.ini
src/ImguiPlugins/: ImguiPlugins.cpp  ImguiPlugins.hpp
src/MemoryReader/: IDebugProbe.hpp  JlinkDebugProbe.cpp  JlinkDebugProbe.hpp  MemoryReader.cpp  MemoryReader.hpp  StlinkDebugProbe.cpp  StlinkDebugProbe.hpp
src/MovingAverage/: MovingAverage.cpp  MovingAverage.hpp
src/Plot/: Plot.cpp  Plot.hpp  PlotHandler.cpp  PlotHandler.hpp
src/PlotGroup/: PlotGroup.hpp
src/PlotGroupHandler/: PlotGroupHandler.hpp
src/PlotHandler/: PlotHandler.cpp  PlotHandler.hpp  PlotHandlerBase.cpp  PlotHandlerBase.hpp  TracePlotHandler.cpp  TracePlotHandler.hpp
src/Recorder/: Recorder.hpp
src/Renderer/: MetalRenderer.hpp  MetalRenderer.mm  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.hpp
src/RingBuffer/: RingBuffer.hpp  RingBufferBlocking.hpp
src/ScrollingBuffer/: ScrollingBuffer.hpp
src/Statistics/: Statistics.hpp
src/TargetMemoryHandler/: IDebugProbe.hpp  ITargetMemoryHandler.hpp  JlinkDynamicLibraryLoader.hpp  JlinkHandler.cpp  JlinkHandler.h  JlinkHandler.hpp  StlinkHandler.cpp  StlinkHandler.hpp  TargetMemoryHandler.cpp  TargetMemoryHandler.hpp
src/TracePlotHandler/: TracePlotHandler.cpp  TracePlotHandler.hpp
src/TraceReader/: ITraceDevice.hpp  ITraceProbe.hpp  ITraceReader.hpp  JLinkTraceDevice.cpp  JLinkTraceDevice.hpp  JLinkTraceProbe.cpp  JlinkTraceDevice.hpp  JlinkTraceProbe.cpp  JlinkTraceProbe.hpp  StlinkTraceDevice.cpp  StlinkTraceDevice.hpp  (+9 more)
test/: CMakeLists.txt  ElfReaderTest.cpp  GdbParserTest.cpp  RingBufferTest.cpp  ScrollingBufferTest.cpp  StatisticsTest.cpp  TraceReaderTest.cpp  VariableTest.cpp  main.cpp
test/STMViewer_test/: .clang-format  .cproject  .mxproject  .project  STM32G474CCUX_FLASH.ld  STM32G474CCUX_RAM.ld  STMViewer_test Debug (1).launch  STMViewer_test Debug.launch  STMViewer_test.ioc
test/STMViewer_test/Core/App/: main.cpp  main.hpp  maincpp.cpp  maincpp.hpp  testClass.cpp  testClass.hpp
test/STMViewer_test/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
test/STMViewer_test/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
test/STMViewer_test/Core/Startup/: startup_stm32g474ccux.s
test/STMViewer_test/Debug/: STMViewer_test.elf  STMViewer_test.list  STMViewer_test.map  objects.list  sources.mk
test/STMViewer_test/Debug/Core/App/: subdir.mk  testClass.su
test/STMViewer_test/Debug/Core/Src/: main.su  stm32g4xx_hal_msp.su  stm32g4xx_it.su  subdir.mk  syscalls.su  sysmem.su  system_stm32g4xx.su
test/STMViewer_test/Debug/Core/Startup/: subdir.mk
test/STMViewer_test/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.su  stm32g4xx_hal_cortex.su  stm32g4xx_hal_dma.su  stm32g4xx_hal_dma_ex.su  stm32g4xx_hal_exti.su  stm32g4xx_hal_flash.su  stm32g4xx_hal_flash_ex.su  stm32g4xx_hal_flash_ramfunc.su  stm32g4xx_hal_gpio.su  stm32g4xx_hal_pwr.su  stm32g4xx_hal_pwr_ex.su  stm32g4xx_hal_rcc.su  stm32g4xx_hal_rcc_ex.su  stm32g4xx_ll_exti.su  stm32g4xx_ll_gpio.su  stm32g4xx_ll_utils.su  subdir.mk
test/STMViewer_test/Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g474xx.h
test/STMViewer_test/Release/: STMViewer_test.elf  STMViewer_test.list  STMViewer_test.map  makefile  objects.mk
test/STMViewer_test/Release/Core/App/: maincpp.su  subdir.mk  testClass.su
test/STMViewer_test/Release/Core/Src/: main.su  stm32g4xx_hal_msp.su  stm32g4xx_it.su  subdir.mk  syscalls.su  sysmem.su  system_stm32g4xx.su
test/STMViewer_test/Release/Core/Startup/: subdir.mk
test/STMViewer_test/Release/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.su  stm32g4xx_hal_cortex.su  stm32g4xx_hal_dma.su  stm32g4xx_hal_dma_ex.su  stm32g4xx_hal_exti.su  stm32g4xx_hal_flash.su  stm32g4xx_hal_flash_ex.su  stm32g4xx_hal_flash_ramfunc.su  stm32g4xx_hal_gpio.su  stm32g4xx_hal_pwr.su  stm32g4xx_hal_pwr_ex.su  stm32g4xx_hal_rcc.su  stm32g4xx_hal_rcc_ex.su  stm32g4xx_ll_exti.su  stm32g4xx_ll_gpio.su  stm32g4xx_ll_utils.su  subdir.mk
test/STMViewer_test/STMViewer_project/: STMViewer_test.cfg
test/testFiles/: MCUViewer_test.elf
test/traceData/: rawData.csv  timestamps.csv
(+41 files in other folders)
